Fix wrap bug

--- a/styles/base.css
+++ b/styles/base.css
@@ -15,3 +15,9 @@
   font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo, sans-serif  !important;
   font-size: unset !important;
 }
+
+.tui-editor-contents a {
+  overflow-wrap: break-word;
+  color: #16add0 !important;
+  word-break: break-all;
+}
